fixed bug overflow

--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,21 @@
     border: solid;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     border-color: black;
     width: 380px;
     height: 380px;
     margin: auto;
 }
 
+.boxContainer{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex: 1 1 0;
+}
+
 .boxes{
     border: solid;
     flex: 1 1 0;
-    padding: 10px;
 }
